# bluefish

./: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  configure.ac
data/: Makefile.am  css_decompressor  jsmin.py  lorem-ipsum-generator
data/bflang/: Makefile.am  ada.bflang2  all-html.bfinc  all-html5.bfinc  all-javascript.bfinc  all-vbscript.bfinc  asp-vbscript.bflang2  asp.bflang2  bflang2.bflang2  c.bflang2  cfml.bflang2  chuck.bflang2  clojure.bflang2  cpp.bflang2  css-rules.bfinc  css-selectors.bfinc  css.bflang2  d.bflang2  diff.bflang2  extract_translatable_strings.sh  go.bflang2  highlighter.bflang2  html.bflang2  html5.bflang2  java.bflang2  javascript.bflang2  json.bflang2  jsp.bflang2  latex.bflang2  lua.bflang2  nsis.bflang2  octave.bflang2  pascal.bflang2  perl.bflang2  php.bflang2  po.bflang2  processing.bflang2  python.bflang2  r.bflang2  ruby.bflang2  (+11 more)
data/colorprofiles/: Light_theme
desktop-data/: bluefish.appdata.xml.in
po/: Makevars  POTFILES.in  POTFILES.skip  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  eu.po  fa.po  fi.po  fr.po  gl.po  it.po  ja.po  ko.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sr.po  sv.po  ta.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: Makefile.am  async_queue.c  bf_lib.c  bf_lib.h  bftextview2.c  bftextview2.h  bftextview2_autocomp.c  bftextview2_langmgr.c  bftextview2_markregion.c  bftextview2_patcompile.c  bftextview2_private.h  bftextview2_scanner.c  bftextview2_scanner.h  bfwin.c  bfwin.h  bfwin_uimanager.c  bluefish.c  bluefish.h  bluefish_rc.rc.in.in  bookmark.c  bookmark.h  (+32 more)
(+679 files in other folders)
